--- a/readme
+++ b/readme
@@ -3,3 +3,6 @@ Unzip the file there
 Open the mainfile.html
 From here play the ctf 
 For any help contact vihwasvishu5610@gmail.com
+
+
+answer will be updated on 22nd dec 2020
