--- a/readme
+++ b/readme
@@ -1,6 +1,8 @@
 HOW TO DOWNLOAD
 -------------------
-<pre><code>git clone https://github.com/VISHWAS-c-dot/CTF.git</code></pre>
+<pre><code>
+git clone https://github.com/VISHWAS-c-dot/CTF.git
+</code></pre>
 
 After downloading the file place in the directory that you need to be in.
 Unzip the file there 
